css/ui.css
:root {
  --light-gray: #dfdfdf;
  --medium-gray: #c5c5c5;
  --dark-gray: #bebebe;
  --black: #3c3c3c;
  --apple-silver: #A3AAAE;
  --apple-white: #F9F6EF;
  --rolex-green: #006039;
  --rolex-orange: #a37d2c;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

*::before, *::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

*:focus {
  outline: none;
}

html {
  height: 100%;
}

body {
  height: 100%;
  font-family: Helvetica Neue, Helvetica, sans-serif;
  display: flex;
  flex-flow: column;
}

.max-opacity {
  opacity: 1;
}

.min-opacity {
  opacity: 0;
}

.no-show {
  display: none;
}

.container {
  flex: 1 0 auto;
  display: flex;
  flex-flow: column;
}

.login-box {
  position: absolute;
  top: 10%;
  left: 50%;
  transform: translate(-50%, -10%);
  z-index: 9;
  background-color: white;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
  border-radius: 15px;
  /* margin: 2rem; */
  padding: 2rem;
  display: flex;
  flex-flow: column;
  transition: opacity 250ms ease-in-out;
}

.instructions-box {
  position: absolute;
  top: 60%;
  left: 50%;
  transform: translate(-50%, -10%);
  z-index: 9;
  background-color: white;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
  border-radius: 15px;
  /* margin: 2rem; */
  padding: 2rem;
  display: flex;
  flex-flow: column;
  transition: opacity 250ms ease-in-out;
}

.login-box > form {
  display: flex;
  flex-flow: column;
}

.welcome {
  color: var(--black);
  white-space: nowrap;
  font-size: 1.5rem;
  font-weight: bold;
  margin-bottom: .5rem;
}

.login-box-instructions {
  margin-bottom: 0.25rem;
}

.login-box > form > input {
  -webkit-appearance: none;
  font-size: 1rem;
  padding: 0.25rem;
  border-style: none;
  background: none;
  border-radius: 5px;
  border: 1px solid rgba(0, 0, 0, 0.25);
  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.1);
}

.login-box > form > input:focus {
  border: 1px solid var(--rolex-orange);
}

.login-box > form > input::placeholder {
  color: var(--dark-gray);
}

#userEmail {
  margin-bottom: 0.5rem;
}

.introduction-message {
  margin-bottom: 1rem;
  color: grey;
}

/* this removes the spinners */
input[type="number"]::-webkit-inner-spin-button, input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input[type=number] {
  -moz-appearance: textfield;
}

.submit-button {
  display: none;
}

.expense-form {
  display: flex;
  flex-flow: column;
  margin-top: 0;
  background-color: black;
}

.display {
  padding: 0.5rem;
  background-color: black;
  height: 5rem;
  display: flex;
  flex-flow: column;
  justify-content: flex-end;
}

.display-blue {
  /* -webkit-transition: all 250ms ease;
  -moz-transition: all 250ms ease;
  -o-transition: all 250ms ease;
  -ms-transition: all 250ms ease; */
  transition: background-color 250ms ease;
  background-color: #0d64ad;
}

input::placeholder {
  transition: color 250ms ease-in-out;
}

.display-blue input::placeholder {
  color: white;
}

.display-black {
  /* -webkit-transition: all 250ms ease;
  -moz-transition: all 250ms ease;
  -o-transition: all 250ms ease;
  -ms-transition: all 250ms ease; */
  transition: background-color 250ms ease;
  background-color: black;
}

::placeholder {
  color: grey;
}

.amount-display {
  width: auto;
  flex: auto;
  font-size: 2rem;
  border-style: none;
  background: none;
  border-radius: 0;
  text-align: right;
  color: var(--light-gray);
}

.notes-display {
  color: var(--light-gray);
  font-size: 1rem;
  background: none;
  border-style: none;
  border-radius: 0;
  text-align: left;
}

.green-text {
  text-shadow: 0 0 0 lime;
}

.red-text {
  text-shadow: 0 0 0 red;
}

.dimmed {
  transition: opacity 250ms ease;
  opacity: 0.25;
}

.categories-icons {
  height: 3.5rem;
  display: flex;
  font-size: 1.75rem;
  justify-content: space-evenly;
}

.dark-label {
  transition: background-color 250ms ease;
  text-align: center;
  background-color: #c5c5c5;
  flex: auto;
  display: flex;
  align-items: center;
  justify-content: center;
}

.light-label {
  /* -webkit-transition: all 250ms ease;
  -moz-transition: all 250ms ease;
  -o-transition: all 250ms ease;
  -ms-transition: all 250ms ease; */
  transition: background-color 250ms ease;
  background-color: #dfdfdf;
}

input[type="radio"], .uncategorized {
  display: none;
}

.summary {
  color: grey;
  margin: 0.5rem;
  display: flex;
  flex-flow: row;
  justify-content: space-evenly;
  align-items: center;
  text-align: center;
}

.summary > div {
  padding: 0.5rem 0;
  flex: 1;
  background-color: #dfdfdf;
  border-radius: 10px;
}

.info-title {
  text-align: left;
  padding-left: 0.75rem;
}

.info-amount {
  text-align: right;
  padding-right: 0.75rem;
  font-size: 1;
}

.summary > div[class="expenses"] {
  margin: 0 0.5rem;
}

.info-title {
  font-weight: bold;
}

.income, .expenses, .balance {
  display: flex;
  flex-flow: column;
}

a {
  text-decoration: none;
}

.transactions {
  margin: 0 0.5rem 0.5rem 0.5rem;
  background-color: #dfdfdf;
  border-radius: 10px;
  padding: 0.5rem;
  transition: opacity 250ms ease-in-out;
}

.info-month {
  font-size: 1.25rem;
  font-weight: bold;
  color: grey;
  margin-bottom: 0.5rem;
}

.info-row {
  display: flex;
  color: grey;
  margin-bottom: 0.5rem;
  padding-bottom: 0.5rem;
  font-weight: bold;
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
}

.info-row * {
  flex: 1;
}

.expense-title {
  display: flex;
  align-items: center;
}

.expense {
  display: flex;
  align-items: center;
  color: var(--black);
}

.expense * {
  flex: 1;
  overflow: hidden;
}

.expense-amount, .expense-notes {
  position: relative;
}

.expense-amount::after, .expense-notes::after {
  content: '';
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  right: 0;
  background: linear-gradient(to right, transparent 75%, var(--light-gray));
}

.edit-icon, .delete-icon {
  border: none;
  text-align: center;
  background: none;
}

.expense-icons {
  display: flex;
  justify-content: space-evenly;
}

.footer {
  /* padding: .5rem; */
  flex-shrink: 0;
  text-align: center;
  height: 5rem;
  background-color: #ddd;
  display: flex;
  flex-flow: column;
  justify-content: space-evenly;
}

.footer > .log-out-button {
  color: grey;
  font-weight: bold;
}

.footer > .copyright {
  color: var(--dark-gray);
  font-size: .75rem;
}

/* @media (orientation: landscape) {
  .container {
    max-width: 768px;
    margin: 1rem;
  }

  .expense-form>.display {
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
  }

  .expense-form {
    background: none;
  }

  .first {
    border-bottom-left-radius: 10px;
  }

  .last {
    border-bottom-right-radius: 10px;
  }

  .summary {
    margin: 1rem 0;
  }

  .list-box {
    margin: 0;
  }
}

@media (min-width: 768px) {
  .container {
    max-width: 768px;
    margin: 1rem auto;
  }

  .initial-animation {
    animation-name: initialAnimation;
    animation-duration: 1s;
  }

  @keyframes initialAnimation {
    0% {
      opacity: 0;
      padding-top: 5rem;
    }

    25% {
      opacity: 0;
    }

    100% {
      opacity: 1;
    }
  }

  .expense-form {
    background: none;
  }

  .expense-form>.display {
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
  }

  .first {
    border-bottom-left-radius: 10px;
  }

  .last {
    border-bottom-right-radius: 10px;
  }

  .summary {
    margin: 1rem 0;
  }

  .list-box {
    margin: 0;
  }
} */

